# Answer_Sheet_OMR

./: .gitignore  PROMPT.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  batch_processing.md  cli_reference.md  debug_outputs.md  grading.md  json_outputs.md  template_and_ordering.md  testing.md
omr_reader/: __init__.py  __main__.py
outputs/batch_results/: batch_summary.json
outputs/batch_results/202512061032_Page_01/: analysis.json
outputs/batch_results/202512061032_Page_02/: analysis.json
outputs/batch_results/202512061032_Page_03/: analysis.json
outputs/batch_results/202512061032_Page_04/: analysis.json
outputs/batch_results/202512061032_Page_05/: analysis.json
outputs/batch_results/202512061032_Page_06/: analysis.json
outputs/batch_results/202512061032_Page_07/: analysis.json
outputs/batch_results/202512061032_Page_08/: analysis.json
outputs/batch_results/202512061032_Page_09/: analysis.json
outputs/batch_results/202512061032_Page_10/: analysis.json
samples/: sample_answer_key.json
src/: __init__.py
src/omr_reader/: __init__.py  alignment.py  analyzer.py  classification.py  cli.py  config.py  debug.py  exceptions.py  grading.py  models.py  preprocess.py  scoring.py  template_builder.py  template_io.py
templates/: answer_sheet_template.json
tests/: test_alignment_and_builder.py  test_analyzer_smoke.py  test_classification.py  test_config_loading.py  test_grading.py  test_integration_real_sample.py  test_preprocess.py  test_scoring_synthetic.py  test_template_schema.py
(+49 files in other folders)
