[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omr-sheet-reader"
version = "0.1.0"
description = "Template-based OMR reader for fixed multiple-choice answer sheets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python-headless",
  "pillow",
  "pydantic>=2",
  "rich",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
omr-reader = "omr_reader.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
